Fixes BugId:12664 - Vertical scrollbar appearing in Chrome on EditPageLayout.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@45157 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/mixins/_edit-page.scss
+++ b/skins/oasis/css/mixins/_edit-page.scss
@@ -62,8 +62,13 @@
 
 // styling for edit area and category select source mode
 @mixin epl-editorarea {
+	display: block; // Webkit treats textareas as inline elements. Fixes BugId:12664
 	font-family: Consolas, "Eupheima UCAS", Ayuthaya, Menlo, monospace;
 	font-size: 13.5px;
+	margin: 0;
+	outline: none;
+	padding: 2px;
+	resize: none; // No resize grip for Webkit / FF4
 	width: 100%;
 }
 
